proyecto_etapa1y2/antlr/CoolParser.py
# Generated from c:\Users\aorti\OneDrive - Instituto Tecnologico y de Estudios Superiores de Monterrey\Neunte teil\Diseño de compiladores\DC - Prácticas\proyecto_etapa1y2\antlr\Cool.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CoolParser ( Parser ):

    grammarFileName = "Cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inherits'", "'{'", "'}'", "','", "'.'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'true'", "'false'", 
                     "':'", "';'", "'<-'", "'=>'", "'*'", "'/'", "'+'", 
                     "'-'", "'='", "'~'", "'('", "')'", "'<'", "'<='", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KLASS", "FI", "IF", "IN", 
                      "INHERITS", "ISVOID", "LET", "LOOP", "POOL", "THEN", 
                      "ELSE", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
                      "TYPE", "ID", "TRUE", "FALSE", "COLON", "SEMICOLON", 
                      "ASSIGN", "CASEASSIGN", "MULT", "DIV", "ADD", "SUB", 
                      "EQUAL", "INTCOMP", "LPAR", "RPAR", "LT", "LTEQ", 
                      "AT", "INTEGER", "STRING", "COMMENT", "LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_case_stat = 5
    RULE_let_decl = 6

    ruleNames =  [ "program", "klass", "feature", "formal", "expr", "case_stat", 
                   "let_decl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    KLASS=6
    FI=7
    IF=8
    IN=9
    INHERITS=10
    ISVOID=11
    LET=12
    LOOP=13
    POOL=14
    THEN=15
    ELSE=16
    WHILE=17
    CASE=18
    ESAC=19
    NEW=20
    OF=21
    NOT=22
    TYPE=23
    ID=24
    TRUE=25
    FALSE=26
    COLON=27
    SEMICOLON=28
    ASSIGN=29
    CASEASSIGN=30
    MULT=31
    DIV=32
    ADD=33
    SUB=34
    EQUAL=35
    INTCOMP=36
    LPAR=37
    RPAR=38
    LT=39
    LTEQ=40
    AT=41
    INTEGER=42
    STRING=43
    COMMENT=44
    LINE_COMMENT=45
    WHITESPACE=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.KlassContext)
            else:
                return self.getTypedRuleContext(CoolParser.KlassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.SEMICOLON)
            else:
                return self.getToken(CoolParser.SEMICOLON, i)

        def getRuleIndex(self):
            return CoolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CoolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoolParser.KLASS:
                self.state = 14
                self.klass()
                self.state = 15
                self.match(CoolParser.SEMICOLON)
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(CoolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(CoolParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.SEMICOLON)
            else:
                return self.getToken(CoolParser.SEMICOLON, i)

        def getRuleIndex(self):
            return CoolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKlass" ):
                return visitor.visitKlass(self)
            else:
                return visitor.visitChildren(self)




    def klass(self):

        localctx = CoolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(CoolParser.KLASS)
            self.state = 23
            self.match(CoolParser.TYPE)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CoolParser.T__0:
                self.state = 24
                self.match(CoolParser.T__0)
                self.state = 25
                self.match(CoolParser.TYPE)


            self.state = 28
            self.match(CoolParser.T__1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoolParser.ID:
                self.state = 29
                self.feature()
                self.state = 30
                self.match(CoolParser.SEMICOLON)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(CoolParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CoolParser.ID, 0)

        def LPAR(self):
            return self.getToken(CoolParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(CoolParser.RPAR, 0)

        def COLON(self):
            return self.getToken(CoolParser.COLON, 0)

        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FormalContext)
            else:
                return self.getTypedRuleContext(CoolParser.FormalContext,i)


        def ASSIGN(self):
            return self.getToken(CoolParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CoolParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = CoolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(CoolParser.ID)
                self.state = 40
                self.match(CoolParser.LPAR)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.ID:
                    self.state = 41
                    self.formal()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CoolParser.T__3:
                        self.state = 42
                        self.match(CoolParser.T__3)
                        self.state = 43
                        self.formal()
                        self.state = 48
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 51
                self.match(CoolParser.RPAR)
                self.state = 52
                self.match(CoolParser.COLON)
                self.state = 53
                self.match(CoolParser.TYPE)
                self.state = 54
                self.match(CoolParser.T__1)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(CoolParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(CoolParser.ID)
                self.state = 59
                self.match(CoolParser.COLON)
                self.state = 60
                self.match(CoolParser.TYPE)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.ASSIGN:
                    self.state = 61
                    self.match(CoolParser.ASSIGN)
                    self.state = 62
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoolParser.RULE_formal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParameterContext(FormalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.FormalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def COLON(self):
            return self.getToken(CoolParser.COLON, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)



    def formal(self):

        localctx = CoolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            localctx = CoolParser.ParameterContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(CoolParser.ID)
            self.state = 68
            self.match(CoolParser.COLON)
            self.state = 69
            self.match(CoolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SumaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def ADD(self):
            return self.getToken(CoolParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuma" ):
                listener.enterSuma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuma" ):
                listener.exitSuma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAR(self):
            return self.getToken(CoolParser.LPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)

        def RPAR(self):
            return self.getToken(CoolParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(CoolParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class IsvoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(CoolParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsvoid" ):
                listener.enterIsvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsvoid" ):
                listener.exitIsvoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsvoid" ):
                return visitor.visitIsvoid(self)
            else:
                return visitor.visitChildren(self)


    class LtContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def LT(self):
            return self.getToken(CoolParser.LT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLt" ):
                listener.enterLt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLt" ):
                listener.exitLt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLt" ):
                return visitor.visitLt(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(CoolParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(CoolParser.LOOP, 0)
        def POOL(self):
            return self.getToken(CoolParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def DIV(self):
            return self.getToken(CoolParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivision" ):
                listener.enterDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivision" ):
                listener.exitDivision(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(CoolParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class BlockContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.SEMICOLON)
            else:
                return self.getToken(CoolParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)


    class LetContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(CoolParser.LET, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ID)
            else:
                return self.getToken(CoolParser.ID, i)
        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.COLON)
            else:
                return self.getToken(CoolParser.COLON, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)
        def IN(self):
            return self.getToken(CoolParser.IN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ASSIGN)
            else:
                return self.getToken(CoolParser.ASSIGN, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet" ):
                listener.enterLet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet" ):
                listener.exitLet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)


    class NewobjectContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(CoolParser.NEW, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewobject" ):
                listener.enterNewobject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewobject" ):
                listener.exitNewobject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewobject" ):
                return visitor.visitNewobject(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(CoolParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def THEN(self):
            return self.getToken(CoolParser.THEN, 0)
        def ELSE(self):
            return self.getToken(CoolParser.ELSE, 0)
        def FI(self):
            return self.getToken(CoolParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class CaseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(CoolParser.CASE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def OF(self):
            return self.getToken(CoolParser.OF, 0)
        def ESAC(self):
            return self.getToken(CoolParser.ESAC, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ID)
            else:
                return self.getToken(CoolParser.ID, i)
        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.COLON)
            else:
                return self.getToken(CoolParser.COLON, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)
        def CASEASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.CASEASSIGN)
            else:
                return self.getToken(CoolParser.CASEASSIGN, i)
        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.SEMICOLON)
            else:
                return self.getToken(CoolParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase" ):
                listener.enterCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase" ):
                listener.exitCase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase" ):
                return visitor.visitCase(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicacionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def MULT(self):
            return self.getToken(CoolParser.MULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicacion" ):
                listener.enterMultiplicacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicacion" ):
                listener.exitMultiplicacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicacion" ):
                return visitor.visitMultiplicacion(self)
            else:
                return visitor.visitChildren(self)


    class SimplecallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def LPAR(self):
            return self.getToken(CoolParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(CoolParser.RPAR, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimplecall" ):
                listener.enterSimplecall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimplecall" ):
                listener.exitSimplecall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimplecall" ):
                return visitor.visitSimplecall(self)
            else:
                return visitor.visitChildren(self)


    class InvertContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTCOMP(self):
            return self.getToken(CoolParser.INTCOMP, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvert" ):
                listener.enterInvert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvert" ):
                listener.exitInvert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvert" ):
                return visitor.visitInvert(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(CoolParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(CoolParser.INTEGER, 0)
